feature:修改代码实现，不基于yaml进行代码生成